# interactive_map

./: .gitignore  README.md  pyproject.toml  requirements.txt
map/templates/: index.html
places/: admin.py  models.py  urls.py  views.py
places/management/commands/: load_place.py
places/migrations/: 0001_initial.py  0002_image.py  0003_image_place.py  0004_alter_image_place.py  0005_image_position.py  0006_alter_image_position.py  0007_auto_20220609_2328.py  0008_auto_20220610_1103.py  0009_auto_20220613_1239.py  0010_alter_place_description_short.py  0010_auto_20220615_1049.py  0010_auto_20220615_1156.py  0011_auto_20220615_1434.py  0012_auto_20220616_2138.py  0012_auto_20220616_2200.py  0012_auto_20220616_2205.py
places/templates/: index.html
where_to_go/: settings.py  urls.py
