[tool.poetry]
name = "interactive-map"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = ">=3.2.0,<3.3.0"
jsonfield = ">=3.0.0,<4.0.0"
Pillow = ">=9.1.0,<9.2.0"
django-extensions = ">=3.1.0,<3.2.0"
django-admin-sortable2 = ">=1.0.0,<1.1.0"
django-tinymce = ">=3.0.0,<4.0.0"
python-dotenv = ">=0.20.0,<0.21.0"
requests = ">=2.28.0,<2.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
